# mithril-engine

./: .gitignore  Cargo.toml  LICENSE.md  build.rs  configFFmpeg.sh  mef-manifest.xml  mefres.rc  rustfmt.toml  windows_manifest.xml  windows_resources.rc
component-derive/: Cargo.toml
component-derive/src/: lib.rs
examples/: camera_controller.rs  ferris.rs  fps_counter.rs  physics.rs  small_island.rs
examples/blank_output/: main.rs
examples/common_models/: test_floor.glb  test_floor.yaml
examples/debugfield/maps/: debugfield.yaml  titlescreen.yaml
examples/debugfield/models/: debug_floor_300x300m.iqm
examples/ferris/: fps_counter.rs  main.rs
examples/ferris/maps/: ferris.yaml
examples/ferris/models/: NewSpecularBake.dds  ferris3d.glb  ferris_material.yaml  test_checkerboard.dds
examples/maps/: ferris.yaml  physics.yaml  small_island.yaml
examples/models/: cube.glb  modular_terrain_island.glb  sphere.glb
examples/models/ferris/: ferris3d.glb
examples/physics/: main.rs
examples/physics/maps/: physics.yaml
examples/small_island/: camera_controller.rs  fps_counter.rs  main.rs
examples/small_island/maps/: small_island.yaml
examples/small_island/models/: cube_blue.glb  cube_green.glb  cube_red.glb  cube_yellow.glb
examples/triangles/: main.rs
examples/triangles/maps/: world_0.yaml
examples/video_playback/media/: smpte-test-hd.mkv
maps/: ferris.yaml  small_island.yaml  sponza.yaml  world_0.yaml
materials/: AreaTexBC5.dds  SearchTexBC4.dds
materials/models/sponza/: Material__25.mmat  Material__57.mmat  background_ddn.dds  bricks.mmat  chain_texture_ddn.dds  column_c.mmat  fabric_c.mmat  fabric_e.mmat  (+12 more)
materials/skybox/: skytemplate.xcf
mithril-engine-derive/: Cargo.toml
mithrilengine-derive/: Cargo.toml
mithrilengine-derive/src/: lib.rs
models/: NewRoughnessBake.dds  NewSheenBake.dds  NewSheenTintBake.dds  cube.glb  cube.yaml  ferris_material.yaml  human_low.iqm  modular_terrain_island.glb
prefabs/: triangle.yaml
resource/: MPLUS_LICENSE_J.txt
shaders/: PBR.yaml  UI.yaml  World.yaml  basic_3d.vert.spv  deferred.frag.spv  deferred.vert.spv  deferred_transparent.frag.spv  fill_viewport.vert.spv  mat_single_color.frag.spv  nv12rgb.frag.spv  pointlight.vert.spv  shadowmapper.vert.spv  skybox.frag.spv  skybox.vert.spv  smaa_blend.frag.spv  smaa_blend.vert.spv  smaa_edge.frag.spv  smaa_edge.vert.spv  smaa_neighborhood.frag.spv  smaa_neighborhood.vert.spv  ssao.frag.spv  standard.frag.spv  ui.frag.spv  ui.geom.spv  ui.vert.spv  ui.yaml  ui_nv12.frag.spv  ui_ycbcr.frag.spv  vid_to_color.frag.spv  vid_to_color.vert.spv  world.yaml
shaders/src/: deferred.vert.hlsl  deferred_transparent.frag.hlsl  fill_viewport.vert.hlsl  genspv.bat  genspv.sh  genspv_dxc_frag.bat  genspv_dxc_vert.bat  genspv_dxc_vert.sh  nv12rgb.frag.hlsl  pointlight.vert.hlsl  shadowmapper.vert.hlsl  skybox.frag.hlsl  smaa_neighborhood.vert.hlsl  ssao.frag.hlsl  standard.frag.hlsl  ui.frag.hlsl  ui.geom.hlsl  ui.vert.hlsl  vid_to_color.frag.hlsl
sky/: Daylight_Back.dds  Daylight_Bottom.dds  Daylight_Front.dds  Daylight_Left.dds  Daylight_Right.dds  Daylight_Top.dds
src/: build.rs  egui_renderer.rs  entities.rs  error.rs  gamecontext.rs  lib.rs  main.rs  mef-manifest.xml  mefres.rc  rendercontext.rs  ui.rs  uicanvas.rs  util.rs  vertex.rs
src/component/: camera.rs  light.rs  mesh.rs  mod.rs  physics.rs
src/gamecontext/: rendercontext.rs  util.rs
src/material/: mod.rs  pbr.rs
src/render/: command_buffer.rs  error.dds  lighting.rs  mod.rs  model.rs  moment_transparency.rs  pipeline.rs  render_target.rs  skybox.rs  smaa.rs  swapchain.rs  texture.rs  transfer.rs  transparency.rs  ui.rs  vulkan_init.rs  wboit.rs  window.rs  workload.rs
src/rendercontext/: mod.rs  pipeline.rs  swapchain.rs  texture.rs
src/shaders/: SMAA.glsl  SMAA.hlsl  basic_3d.vert.glsl  basic_3d.vert.hlsl  basic_3d_nonorm.vert.glsl  basic_3d_nonorm.vert.hlsl  deferred.frag.hlsl  fill_viewport.vert.glsl  fill_viewport.vert.hlsl  fill_viewport_posonly.vert.hlsl  mat_single_color.frag.hlsl  materials_common.glsl  mboit_compositing.frag.hlsl  mboit_moments.frag.glsl  mboit_moments.frag.hlsl  mboit_weights.glsl  mboit_weights.hlsl  pbr.frag.glsl  pbr.frag.hlsl  pbr_mboit_weights.frag.hlsl  pbr_wboit.frag.hlsl  pointlight.vert.glsl  pointlight.vert.hlsl  shadowmapper.vert.glsl  shadowmapper.vert.hlsl  sky.frag.glsl  sky.vert.glsl  skybox.frag.hlsl  skybox.vert.hlsl  smaa_blend.frag.glsl  smaa_blend.frag.hlsl  smaa_blend.vert.glsl  smaa_blend.vert.hlsl  smaa_common.glsl  smaa_common.hlsl  smaa_edge.frag.glsl  smaa_edge.frag.hlsl  smaa_edge.vert.glsl  smaa_edge.vert.hlsl  smaa_neighborhood.frag.glsl  (+10 more)
src/ui/: image.rs  img.rs  mod.rs  quad.rs
tools/: MMATExporter.py  genspv.bat  genspv.sh  genspv_dxc_frag.bat  genspv_dxc_frag.sh  genspv_dxc_geom.bat  genspv_dxc_geom.sh  genspv_dxc_vert.bat
(+43 files in other folders)
