[package]
name = "mithrilengine"
version = "0.0.2"
authors = ["daigennki <daigennki@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1   # needed to stop stack overflow in Windows debug build; see https://github.com/vulkano-rs/vulkano/issues/1790#issuecomment-1023222638

[build-dependencies]
shaderc = "0.8"

[dependencies]
mithrilengine-derive = { version = "0.1.0", path = "mithrilengine-derive" }
winit = "0.26"
rusttype = "0.9"
image = { version = "0.24", features = ["png"] }
ddsfile = "0.5"
vulkano = "0.30"
vulkano-win = "0.30"
spirv-reflect = "0.2"
# physx = "0.12"
# ffmpeg-next = { version = "4.4", features = ["codec", "format"] }
# steamworks = "0.8"
glam = { version = "0.21", features = ["bytemuck", "serde"] }
# openal = "0.2"
# mlua = { version = "0.7", features = ["luajit", "vendored"] }     # Configured for standalone mode for improved safety
msgbox = "0.7"
# chrono = "0.4"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
simplelog = "0.12"
shipyard = "0.6"
bytemuck = "1.9"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
typetag = "0.2"
gltf = { version = "1.0", features = ["extras", "names", "utils", "import"] }
tobj = "3.2.3"
egui_winit_vulkano = "0.19"

