[package]
name = "mithrilengine"
version = "0.0.2"
authors = ["daigennki <daigennki@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1   # needed to stop stack overflow in Windows debug build; see https://github.com/vulkano-rs/vulkano/issues/1790#issuecomment-1023222638

[features]
egui = ["dep:egui_winit_vulkano"]

[build-dependencies]
shaderc = "0.8"

[dependencies]
mithrilengine-derive = { version = "0.1.0", path = "mithrilengine-derive" }
winit = "0.28"
rusttype = "0.9"
image = { version = "0.24", features = ["png"] }
ddsfile = "0.5"
#vulkano = "0.33"
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
glam = { version = "0.21", features = ["bytemuck", "serde"] }
msgbox = "0.7"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
simplelog = "0.12"
shipyard = "0.6"
bytemuck = "1.9"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["raw_value"] }
typetag = "0.2"
gltf = { version = "1.0", features = ["extras", "names", "utils", "import"] }
egui_winit_vulkano = { version = "0.22", optional = true }
#rapier = "0.16.1"
#kira = "0.7.1"

#tobj = "3.2.3"
#ffmpeg-next = { version = "4.4", features = ["codec", "format"] }
#steamworks = "0.8"
#mlua = { version = "0.7", features = ["luajit", "vendored"] }     # Configured for standalone mode for improved safety

