[package]
name = "mithrilengine"
version = "0.0.2"
authors = ["daigennki <daigennki@users.noreply.github.com>"]
edition = "2021"

# Rust 1.75 or later is needed because it provides high-resolution timer support on Windows, which
# we use for the framerate limiter.
rust-version = "1.75"

[profile.dev]
opt-level = 1 # needed to stop stack overflow in Windows debug build; see https://github.com/vulkano-rs/vulkano/issues/1790#issuecomment-1023222638

#[features]
#egui = ["dep:egui_winit_vulkano"]

[build-dependencies]
shaderc = "0.8"

[dependencies]
mithrilengine-derive = { version = "0.1.0", path = "mithrilengine-derive" }
winit = { version = "0.29", default-features = true, features = ["rwh_05"] }
rusttype = "0.9"
image = { version = "0.24", features = ["png"] }
ddsfile = "0.5"
vulkano = "0.34"
vulkano-shaders = "0.34"
glam = { version = "0.24", features = ["bytemuck", "serde"] }
msgbox = "0.7"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
simplelog = "0.12"
shipyard = "0.6"
bytemuck = { version = "1.9", features = ["extern_crate_alloc"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0", features = ["raw_value"] }
typetag = "0.2"
gltf = { version = "1.4", features = ["extras", "names", "utils", "import", "KHR_materials_variants"] }
winit_input_helper = "0.15"
smallvec = "1.11"
regex = "1.10"
rapier3d-f64 = { version = "0.18", features = ["serde-serialize"] }
nalgebra = { version = "0.32", features = ["convert-glam024"] }
#egui_winit_vulkano = { version = "0.22", optional = true }
#kira = "0.7.1"

#ffmpeg-next = { version = "4.4", features = ["codec", "format"] }
#steamworks = "0.8"
#mlua = { version = "0.7", features = ["luajit", "vendored"] }     # Configured for standalone mode for improved safety

